tooling/nargo_cli/tests/snapshots/execution_success/regression_6674_2/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "11890127694861652393": {
        "error_kind": "string",
        "string": "equality"
      },
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1ZzYrTUBRO2qZ/aZuOPsaANG0y7ewG8QHcCe4ynZmF4FoRhCx8AhEEFz6BS/du3CgIggtx405Q8CHsHe+ZfP16knamSWXAQLnJPed+5+d+5/7MuE72uLZtOFs8AvLbth3b1kBeX/yO7PdouyfskN0y8WejKOoo8ZXo/6RjMd1q8EeCX1H+Ry2LcyfN8DEWsdte/Hx47zkZP6qKX+avyvhvFsTs21jfU6wid0r0ow+xOeAL2m1Uk4PYJXsO+IEysd8lX8teE1yyJ/5wfmQeJHee4utQkSGXUIZ2PMXOdcSS3GAu3ZxW7HAf22Eeop16CXY6Sjxl1vzQWeWvR3E0S4hjSFiuEmOrmhgv1s02+FUSdijYvHeXjd+tJjehzDHOp8y/mat96Dc/2fc8J6tDHNsCOeq/Acxb9n2Tdb5ZTdwbr/Nif1frfJP8WbfO+4qvQ0XG66mv2PEVO9cRK1CwGyQrWocQs8y1VmKU82JDiRF9q5E+vpvHo77btjXr3EcYk8cr7OO81hR/qt4PeP/slWgHc1jEE8ESLvRJdmS/R1s+Mi8Di4dc6Cu+1kgf383jUd9d22pcwDN7Xenj3NUVf/rKuG3nSJsHbX+SvdBw5x70b7M/PQfM+/Zd40ePfNb4uwnntJzuav0RfuWtP+JbzVnlo7xjDqVvbluNc7iHFe1rm3ChjHP1JtzO49wD6N+Gc48B86F9D5TxvK83yT7KijiHmLIfVvw3hbFL9pycHBXVB9/XZJyn6LZJJrqPbGvkn+y7mQftHIXn3ydktw/4Wu2wb6KfAuZT0tfOPBr3NF76gCu8DBxH3bvQ5mBNHMxZ0X9mW5PHz4QZOKtx4HrBZ72hoh8osQXkA44V/HqayaRP7mQNkJV5hzA5+AJ+cA68dPN4tfzsKfpD0nGcrPb3QDYgGc5/QBh9xQ5ygfmHMhmLtbKupl7k2L9sTb0CzJekX1ZNyflCqymer6vW1Gvb/q+p61VTiF1VTUmtBIoe32lx76+TDHnL97cBfaNum2JuKuOK+I8+5fH/rW2R/xoHJfZ/wcGlu1a6HLdWo6h/2RrlOwbys09Y2jqHOe+SPnJL08ezLOq/s63JzS/yD/8GXrTv+Bv4fpU1et++V8mL6ezv/enc1zTLEd5FHLLvkf4H+41zIm1jCz/Ppkl4NknOkjg5OYnmyQ3CNw/+H69s+8l0MpuPo/n0OJ4kk4Pd249H48lsHMXjaBKHyeGu7c/jg+N5FCej09B8jtfZl1pvppkc1znztOy33NFZX/A80v8quovfN/t+cb5KV+0ZvZ8Fem5Oe46h9DXS5b5OuqpfT1f1xXY3XfVRZD7IcA02T89+Y74QS/zwSP+H/ZY5acMYGT9U7LfJ/pLfSh/uAYxVV/pE38zPd8GzLcZe9v8gzm0SPvaxb8KdKupqUVLTeTINw8MoPI3CeF1d/QEBlDjjASQAAA==",
  "debug_symbols": "tZfdauMwEIXfxde50O9I6qsspaSpWwzGCW6ysJS8+874aJx2wSY47E3P59j6kEZjNflq3trXy8dLN7wfP5unX1/N69j1fffx0h8P+3N3HPjTr8bIH+ubJ7drbEBEBCESIiPKFM4gLMIhYHGwOFgcLI4tliMjyhTeICzCITwiICKCpgh8L3DwVeRIiIwoU0SDsAiH8IiAiAhYIiwRlggLwUKwECwEC8FCsBAsBAvBQrAkWBIsCZYES2JL5ogIQiRERpQpskFYhFTJcPqaoaYUmEtU+OnEYREOIQ97zlAz1qSaqWauWZDWGAXZoyjgFLyCSEhARkmPWKNgFXiUPCKNZpNAUIgKoskCSSFXkP6yRUB6yghk/aRUmHppAqsgXWkFvEJQUI/0FSApZIVSIRgFq+AUvIKMml4deUYKJr2GT6ICKSQFGRUESgXpO4B6pPcAXiEoRAVSSApZoVSQ7nOyBdJ/gKAgHtkC6UKAeKSG0omAUkG60cuSpR8BTsErBIWoQAps9rIFOSuUCtK5AKvgFGTO+XrdNXp2vZzHtpWj69thxkfcaT+2w7l5Gi59v2t+7/vL9NDnaT9Med6PfJcn0g5vnCx87/pW6Lq7jTbLQ7k0OpprYmdB/GmwywaS/Z0E5N3S+NUZlKQzyMEsGfyyIcmuT4Lk0pYZlOB0BiX4DQZnvE7BmbRYRVqZg8tR5+DtYh3TisHHeSd9DlsMIc87Ee3iKsqKIRaaDSVtMdBtL2h5L+jhOsgx/j8V99XShoeLuaq4r5qrnV20FI7/qTxqWH6/15dBcyWINlYi3yqRaaOizIriNzX3XesoDy+jPLyKleM2B+3sTIvvhosrAqtVyIG2CErSIpRctqzgrgnkByewJnDB6jtBfpMgzy/VP5v4zFf7Qzf++Fl0FdPY7V/7tl6+X4bDt7vnPye9oz+rTuPx0L5dxlZMt99W/OeX42/mzrtn+ZLMl5YPKmesXFq5ayJfpuerTOYv",
  "file_map": {
    "50": {
      "source": "use std::mem::zeroed;\n\npub struct BoundedVec4 {\n    storage: [Field; 4],\n    len: u32,\n}\n\nimpl BoundedVec4 {\n    pub fn new() -> Self {\n        BoundedVec4 { storage: [0; 4], len: 0 }\n    }\n\n    pub fn push(&mut self, elem: Field) {\n        self.storage[self.len] = elem;\n        self.len += 1;\n    }\n}\n\npub struct PrivateKernelCircuitPublicInputs {\n    pub l2_to_l1_msgs: [Field; 4],\n    pub public_call_requests: [Field; 4],\n}\n\npub struct FixtureBuilder {\n    pub public_call_requests: BoundedVec4,\n    pub counter: Field,\n}\n\nimpl FixtureBuilder {\n    pub fn new() -> Self {\n        FixtureBuilder { public_call_requests: zeroed(), counter: 0 }\n    }\n\n    pub fn append_public_call_requests(&mut self) {\n        for _ in 0..4 {\n            // Note that here we push directly, not through a method call\n            self.public_call_requests.push(self.next_counter());\n        }\n    }\n\n    fn next_counter(&mut self) -> Field {\n        let counter = self.counter;\n        self.counter += 1;\n        counter\n    }\n}\n\npub struct PrivateKernelCircuitPublicInputsComposer {\n    pub l2_to_l1_msgs: [Field; 4],\n    pub public_call_requests: [Field; 4],\n}\n\nimpl PrivateKernelCircuitPublicInputsComposer {\n    pub unconstrained fn sort_ordered_values(&mut self) {\n        self.l2_to_l1_msgs = sort_by(self.l2_to_l1_msgs);\n        self.public_call_requests = sort_by(self.public_call_requests);\n    }\n}\n\npub unconstrained fn sort_by(array: [Field; 4]) -> [Field; 4] {\n    let result = array;\n    get_sorting_index(array);\n    result\n}\n\nunconstrained fn get_sorting_index(array: [Field; 4]) {\n    let _ = [0; 4];\n    let mut a = array;\n    for i in 1..4 {\n        for j in 0..i {\n            a[i] = a[j];\n        }\n    }\n}\n\nunconstrained fn main() {\n    let mut previous_kernel = FixtureBuilder::new();\n    previous_kernel.append_public_call_requests();\n\n    let mut output_composer = PrivateKernelCircuitPublicInputsComposer {\n        l2_to_l1_msgs: [0; 4],\n        public_call_requests: previous_kernel.public_call_requests.storage,\n    };\n    output_composer.sort_ordered_values();\n\n    assert_eq(previous_kernel.public_call_requests.storage[1], 1, \"equality\");\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
